--- a/.github/workflows/run-extractor.yaml
+++ b/.github/workflows/run-extractor.yaml
@@ -154,6 +154,8 @@ jobs:
   create-pull-request:
     needs: extract
     runs-on: [ubuntu-latest]
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
           
