--- a/.github/workflows/run-extractor.yaml
+++ b/.github/workflows/run-extractor.yaml
@@ -155,6 +155,7 @@ jobs:
     needs: extract
     runs-on: [ubuntu-latest]
     permissions:
+      contents: write
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
